--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
@@ -20,8 +22,15 @@
     "test:coverage": "jest --coverage"
   },
   "jest": {
+    "setupFiles": [
+      "./src/setupTests.js"
+    ],
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
-    ]
-  }
+    ],
+    "moduleNameMapper": {
+      ".+\\.(css|styl|less|sass|scss|png|jpg|ttf|woff|woff2|svg)$": "identity-obj-proxy"
+    }
+  },
+  "devDependencies": {}
 }
